# timedated

./: AUTHORS  NEWS  README  README.md  meson.build  meson_options.txt
dbus/: meson.build  org.freedesktop.timedate1.xml
l10n/: _generate-pot.sh
po/: LINGUAS  POTFILES.in  meson.build  ru_RU.utf8.po  timedated.pot
src/: meson.build  org.freedesktop.timedate1.conf.in  org.freedesktop.timedate1.policy.in  org.freedesktop.timedate1.rules.in  org.freedesktop.timedate1.service.in  rcl-main.c  rcl-ntpd-utils.c  rcl-ntpd-utils.h  rcl-time-utils.c  rcl-time-utils.h  rcl-timedate.c  rcl-timedate.h  rcl-zone-utils.c  rcl-zone-utils.h
